--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "copy-webpack-plugin": "^9.0.1",
     "@craco/craco": "^5.9.0",
     "@heroicons/react": "^1.0.1",
     "pdfjs-dist": "^2.10.377",
