--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^1.1.5",
-    "react-social-icons": "^5.6.1"
+    "react-social-icons": "^5.6.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   },
   "scripts": {
     "start": "craco start",
